--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "token":"MTAwOTU1MDYxMzE5MDgxMTcwOQ.G8alr-.fT-1Zz4jJPyQC6-rL1ejykA5tKtUcpKRqnSe10"
+    "token":"Coloque o token do seu bot aqui"
 }
